--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
     "require": {
         "php": "^8.0.0",
         "symfony/dom-crawler": "^6.3",
-        "laravel/framework": "^10.10",
+        "laravel/framework": "^10.10|^11.0",
         "intervention/image": "^2.7",
         "doctrine/dbal": "^3.6",
         "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
-        "laravel/laravel": "^10.0",
+        "laravel/laravel": "^10.0|^11.0",
         "phpunit/phpunit": "^9.0",
         "symfony/css-selector": "~5.2",
         "fakerphp/faker": "^1.9",
